# python-template

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  copier.yml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  taskfile.yml
.config/: ruff.toml
.copier/: licenses.yml  questions.yml  settings.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  pages.yml  release.yml  test.yml
.taskfiles/: lint.yml  mkdocs.yml  update.yml
docs/: getting-started.md  index.md  mkdocs.md
getting-started/: index.html
mkdocs/: index.html
search/: search_index.json
template/: .editorconfig  LICENSE.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  taskfile.yml  {% if license != 'None' %}LICENSE{% endif %}.jinja
template/.devcontainer/: devcontainer.json.jinja
template/.taskfiles/: lint.yml  test.yml
template/src/{{ package_name }}/: __main__.py.jinja
tests/: test_template.py
tests/fixtures/: override.yml
