[tool.poetry]
name = "python-template"
version = "0.0.0"
description = "A python project template"
license = "MIT"
authors = [
  "Philippe-André De Carvalho <philippe.andre.decarvalho@gmail.com>"
]
maintainers = [
  "Philippe-André De Carvalho <philippe.andre.decarvalho@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/pa-decarvalho/python-template"
repository = "https://github.com/pa-decarvalho/python-template"
documentation = "https://pa-decarvalho.github.io/python-template/"
keywords = ["python", "template"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
copier = "^9.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
commitizen = "^4.2.1"
ruff = "^0.9.6"
yamllint = "^1.35.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
