[project]
name = "python-template"
version = "0.2.0"
description = "A python project template"
license = { text = "MIT" }
authors = [
    { name = "Philippe-André De Carvalho", email = "philippe.andre.decarvalho@gmail.com" },
]
maintainers = [
    { name = "Philippe-André De Carvalho", email = "philippe.andre.decarvalho@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["python", "template"]
dependencies = [
    "copier (>=9.5.0,<10.0.0)"
]

[project.urls]
homepage = "https://github.com/pa-decarvalho/python-template"
repository = "https://github.com/pa-decarvalho/python-template"
documentation = "https://pa-decarvalho.github.io/python-template/"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
commitizen = "^4.2.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.9.6"
yamllint = "^1.35.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
